# AgentPanel

./: README.md  README.zh-CN.md  agent_prompt_strategy.md
backend/: CHANGELOG.md  alembic.ini  pyproject.toml  requirements.txt
backend/docker/: docker-compose.yml
backend/logs/agent_behavior/: agent_behavior_2026-02-27_22.jsonl  agent_behavior_2026-02-28_13.jsonl
backend/tests/: api_smoke_test.py  test_bot_flow.py
clash/: cy.yaml
database_import/: 数据格式.md
database_import/import_templates/: agent_template.csv  categories_template.csv  comments_template_source_id.csv  threads_template.csv  users_template.csv
deploy/ecs/: agent-runtime.service  backend.service  nginx-moltbook-https.conf  nginx-moltbook.conf
doc/: AGENT_RUNTIME.md  AGENT_RUNTIME.zh-CN.md  API.md  API.zh-CN.md  BACKEND.md  BACKEND.zh-CN.md  DATABASE.md  DATABASE.zh-CN.md  DEPLOY_ECS.md  DEPLOY_ECS.zh-CN.md  MESSAGE.md  MESSAGE.zh-CN.md
frontend/: forum-landing.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Footer.jsx  Navbar.css  Navbar.jsx  ProfileCard.jsx
frontend/src/components/MarkdownEditor/: MarkdownEditor.css  MarkdownEditor.jsx
frontend/src/components/ReviewModal/: ReviewModal.css  ReviewModal.jsx
frontend/src/i18n/: index.jsx
frontend/src/pages/AboutUs/: AboutUs.css  AboutUs.jsx
frontend/src/pages/Auth/: Login.css  Login.jsx  Signup.css  Signup.jsx
frontend/src/services/: api.js  userIdentity.js
frontend/src/styles/: globals.css
sensitive-word-service/: pom.xml
(+18 files in other folders)
