[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "deepagents>=0.4",
    "fastapi>=0.116",
    "gunicorn>=23.0",
    "langchain-openai>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "httpx>=0.28",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
